Introcude multiple reportType (timeline, counters) New javascript/css: - Fix issue with beeing able to display only 2 charts - Add support for layers, pie and histogram - Fix issue with legend not being aligned by insetring it directly into the html5 graph itself
(Disabled CSV data, and might have broken support for multiple graphs on one chart. TBD)

--- a/src/main/resources/static/styles/dashboard.css
+++ b/src/main/resources/static/styles/dashboard.css
@@ -69,3 +69,24 @@ path {
   fill: none;
   stroke: #000;
 }
+
+.title {
+    font: 15px sans-serif;
+    font-weight: bold;
+}
+
+.bar rect {
+    fill: steelblue;
+    shape-rendering: crispEdges;
+}
+
+.bar text {
+    fill: #fff;
+}
+
+.legend {
+    padding: 5px;
+    font: 10px sans-serif;
+    background: yellow;
+    box-shadow: 2px 2px 1px #888;
+}
